Fixed problem where the width of the legend is too small causing the contents to wrap around

--- a/src/components/MasterChart/MasterChart.css
+++ b/src/components/MasterChart/MasterChart.css
@@ -16,8 +16,8 @@
 }
 
 #legend {
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 190px;
+  max-width: 190px;
   float: right;
   z-index: 1;
   padding: 0px;
